# Choose-Your-Own-Adventure-AI-02

backend/: .env  database.db  main.py  pyproject.toml  requirements.txt
backend/.choreo/: component.yaml
backend/core/: config.py  models.py  story_generator.py
backend/db/: database.py
backend/models/: story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
frontend/: vite.config.js
frontend/src/: App.jsx  util.js
frontend/src/components/: LoadingStatus.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
